# django-bootstrap5

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  MIGRATE.md  Makefile  README.md  justfile  manage.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
docs/: conf.py  example_template.rst  forms.rst  index.rst  installation.rst  migrate.rst  quickstart.rst  requirements.txt  settings.rst  templates.rst  templatetags.rst  widgets.rst
example/: README.md  settings.py  urls.py
tests/: base.py  image.py  smoke_test.py  test_bootstrap_alert.py  test_bootstrap_button.py  test_bootstrap_css_and_js_tags.py  test_bootstrap_field.py  test_bootstrap_field_datetime.py  test_bootstrap_field_floating.py  test_bootstrap_field_horizontal.py  test_bootstrap_field_input.py  test_bootstrap_field_input_checkbox.py  test_bootstrap_field_input_color.py  test_bootstrap_field_input_file.py  test_bootstrap_field_input_range.py  test_bootstrap_field_input_text.py  test_bootstrap_field_parameters.py  test_bootstrap_field_radio_select.py  test_bootstrap_field_radio_select_button_group.py  test_bootstrap_field_select.py  test_bootstrap_field_textarea.py  test_bootstrap_form.py  test_bootstrap_formset.py  test_bootstrap_label.py  test_bootstrap_messages.py  test_bootstrap_pagination.py  test_bootstrap_show_label.py  test_components.py  test_css.py  test_html.py  test_jinja2.py  test_settings.py  test_size.py  test_templates.py  test_templatetags.py  test_text.py  (+3 more)
(+38 files in other folders)
