[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39", "py310", "py311"]

[tool.coverage.run]
branch = true
source = ["django_bootstrap5"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120
skip_glob = "*/migrations/*.py"
known_first_party = ["django_bootstrap5"]
known_third_party = ["django"]
src_paths = ["*.py", "django_bootstrap5", "tests", "example"]

[tool.pydocstyle]
# Explanation of rules that are ignored (and why):
# D1: Missing docstring error codes (because not every function and class has a docstring)
# D202: No blank lines allowed after function docstring (play nice with docformatter)
# D301: Use r”“” if any backslashes in a docstring (unclear how else to handle backslashes in docstrings)
# D413: Missing blank line after last section (play nice with docformatter)
add_ignore = ["D1", "D202", "D301", "D413"]
